invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_48.src
.IPPcode24
EQ LF@d int@49 string@henlo LF@a